# duty-schedule-gen

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY_YC_GITHUB_ACTIONS.md  Dockerfile  LICENSE  NOTES.md  README.md  api_main.py  app.py  cliff.toml  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  УСТАНОВКА.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-python/: action.yml
.github/actions/streamlit-smoke/: action.yml
.github/workflows/: ci-dev.yml  ci-main.yml  ci-tag.yml  ci-test.yml  ci.yml  deploy.yml  release.yml
.streamlit/: config.toml
docs/: architecture.md  scheduling_logic.md
examples/: config.yaml
launchers/: start-linux.sh  start-macos.command  start-windows.bat
src/duty_schedule/: __init__.py  calendar.py  cli.py  constants.py  costs.py  logging.py  models.py  scheduler.py  stats.py  validation.py  xls_import.py
src/duty_schedule/api/: __init__.py  auth.py  errors.py  ratelimit.py  schemas.py  settings.py  whatif_service.py
src/duty_schedule/api/routes/: config.py  export.py  holidays.py  schedule.py  whatif.py
src/duty_schedule/export/: __init__.py  ics.py  pdf.py  xls.py
src/duty_schedule/scheduler/: __init__.py  changelog.py  constraints.py  core.py  greedy.py  multimonth.py  postprocess.py  solver.py
src/duty_schedule/scheduler/postprocess/: __init__.py  balance.py  carry_over_calc.py  helpers.py  isolation.py  metrics.py  pipeline.py  target.py  validation.py
src/duty_schedule/ui/: __init__.py  builders.py  config_io.py  mappings.py  state.py  views.py
tests/: conftest.py
tests/contract/: conftest.py  test_api_auth_contract.py  test_api_content_type_contract.py  test_api_contract.py  test_api_error_contract.py  test_api_ratelimit_contract.py  test_api_response_schema_contract.py  test_config_yaml_contract.py  test_export_format_contract.py  test_model_contracts.py
tests/e2e/: conftest.py  test_cli_workflow.py  test_streamlit_api.py
tests/integration/: test_api_auth_integration.py  test_api_endpoints.py  test_carry_over.py  test_edge_cases.py  test_full_schedule.py  test_hypothesis.py  test_logging_integration.py  test_multimonth.py  test_new_features.py  test_pins.py  test_priority_integration.py  test_randomized_schedules.py  test_whatif_endpoint.py  test_xls_roundtrip.py
tests/performance/: test_large_team.py  test_scheduler_benchmark.py
tests/system/: test_business_rules.py  test_constraint_satisfaction.py  test_determinism.py
tests/ui/: conftest.py  test_export_download.py  test_page_load.py  test_schedule_generation.py
tests/unit/: test_api_auth.py  test_api_errors.py  test_api_ratelimit.py  test_api_schemas.py  test_api_settings.py  test_calendar.py  test_carry_over_calc.py  test_changelog.py  test_cli.py  test_constraints.py  test_costs.py  test_equalize_cross_city.py  test_export_security.py  test_failure_modes.py  test_ics_per_employee.py  test_logging_features.py  test_logging_setup.py  test_metrics.py  test_models.py  test_multimonth.py  test_pdf_export.py  test_pipeline.py  test_postprocess.py  test_postprocess_priority.py  test_schedule_diff.py  test_scheduler.py  test_solver.py  test_stats.py  test_validation.py  test_validation_postprocess.py  test_whatif_service.py  test_xls_import.py
