[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duty-schedule"
version = "1.5.0"
description = "Генератор графика дежурств с покрытием 24/7"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "icalendar>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "rich>=13.7",
    "streamlit>=1.32.0",
]

[project.scripts]
duty-schedule = "duty_schedule.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/duty_schedule"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["duty_schedule"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
