[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duty-schedule"
version = "3.0.0"
description = "Генератор графика дежурств с покрытием 24/7"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "icalendar>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "rich>=13.7",
    "streamlit>=1.32.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
    "weasyprint>=62",
]

[project.optional-dependencies]
solver = ["ortools>=9.10"]

[project.scripts]
duty-schedule = "duty_schedule.cli:app"
duty-schedule-api = "duty_schedule.api:run"

[tool.hatch.build.targets.wheel]
packages = ["src/duty_schedule"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.0",
    "pre-commit>=3.7",
    "pandas-stubs>=2.0",
    "types-openpyxl>=3.1",
]
ci-security = [
    "bandit>=1.7",
    "pip-audit>=2.7",
]
ci-perf = [
    "pytest-benchmark>=4.0",
]
ci-ui = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "benchmark: performance benchmark tests",
    "ui: UI tests requiring Playwright",
    "e2e: end-to-end tests",
    "system: system-level tests",
    "contract: contract tests",
]

[tool.coverage.run]
source = ["duty_schedule"]
branch = true
omit = ["src/duty_schedule/ui/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "icalendar",
    "icalendar.*",
    "weasyprint",
    "weasyprint.*",
    "streamlit",
    "streamlit.*",
    "altair",
    "altair.*",
    "ortools",
    "ortools.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311", "B104"]
